--- a/ChatApp/ChatAppEAR/.project
+++ b/ChatApp/ChatAppEAR/.project
@@ -4,6 +4,8 @@
 	<comment></comment>
 	<projects>
 		<project>ChatAppWAR</project>
+		<project>ChatAppJar</project>
+		<project>ChatAppJAR</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
