--- a/ChatApp/ChatAppWAR/.classpath
+++ b/ChatApp/ChatAppWAR/.classpath
@@ -13,5 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="jackson-databind-2.9.5.jar"/>
+	<classpathentry kind="lib" path="jackson-core-2.9.5.jar"/>
+	<classpathentry kind="lib" path="json-20171018.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ChatAppJAR"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
