Omogućeno pozivanje CRUD operacija preko REST-a. Izmenjen model.

--- a/UserApp/UserAppWAR/.project
+++ b/UserApp/UserAppWAR/.project
@@ -3,6 +3,7 @@
 	<name>UserAppWAR</name>
 	<comment></comment>
 	<projects>
+		<project>UserAppEJB</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
